@@ -248,6 +248,31 @@
         </column>
       </group>
 
+      <group title="Options for configuring ovn-sbctl">
+        <p>
+          These options apply when <code>ovn-sbctl</code> connects to
+          OVN Southbound database.
+        </p>
+
+        <column name="options" key="sbctl_probe_interval">
+          <p>
+            The inactivity probe interval of the connection to the OVN
+            Southbound database from <code>ovn-sbctl</code> utility, in
+            milliseconds.  If the value is zero, it disables the connection
+            keepalive feature.
+          </p>
+
+          <p>
+            If the value is nonzero, then it will be forced to a value of
+            at least 1000 ms.
+          </p>
+
+          <p>
+            If the value is less than zero, then the default inactivity probe
+            interval for <code>ovn-sbctl</code> would be left intact (120000 ms).
+          </p>
+        </column>
+      </group>
     </group>
 
     <group title="Connection Options">
