@@ -20,6 +20,8 @@
 #include <stdbool.h>
 #include "ovsdb-idl.h"
 
+#define DEFAULT_UTILS_PROBE_INTERVAL_MSEC 120000
+
 struct timer;
 
 enum nbctl_wait_type {
@@ -52,6 +54,7 @@ struct ovn_dbctl_options {
                           const struct timer *wait_timeout,
                           long long int start_time, bool print_wait_time);
 
+    int (*get_inactivity_probe)(struct ovsdb_idl *);
     struct ctl_context *(*ctx_create)(void);
     void (*ctx_destroy)(struct ctl_context *);
 };
